--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/LinearLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
-<TextView android:layout_width="fill_parent" android:text="@string/initialText" android:id="@+id/statusText" android:layout_height="wrap_content" android:layout_below="@+id/currentBusText" android:layout_alignParentLeft="true"></TextView>
+<TextView android:layout_width="fill_parent" android:text="@string/initialText" android:id="@+id/statusText" android:layout_height="wrap_content" android:layout_below="@string/currentBusText" android:layout_alignParentLeft="true"></TextView>
 <EditText android:selectAllOnFocus="true" android:lines="1" android:layout_height="wrap_content" android:contentDescription="Odometer reading" android:layout_width="wrap_content" android:hint="Odometer" android:digits="0123456789" android:id="@+id/odometer" android:inputType="number" android:scrollHorizontally="false" android:layout_below="@+id/statusText" android:layout_centerHorizontal="true">
     <requestFocus></requestFocus>
 </EditText>
